Added Fluent API for Movie entity

--- a/MovieShopMVC/appsettings.json
+++ b/MovieShopMVC/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MovieShopDbConnection": "Server=DESKTOP-JMA0H78\\QQSQ;Database= MovieShopHW;Integrated Security=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
